# portfolio-optimizer

./: Home.py  Makefile  README.md  market_data_service.py  portfolio_metrics.py  pyproject.toml  streamlit_app.py
.devcontainer/: devcontainer.json
data/: euribor_3m.csv
pages/: 1_Performance_and_Returns.py  1_Returns.py  2_Risk_Analysis.py  2_Risks.py  3_Forecast.py
portfolio_analyzer/: config.py  interest_data_service.py  utils.py
portfolio_optimizer/: interest_data_service.py  market_data_service.py  portfolio_metrics.py  streamlit_app.py  utils.py
portfolio_optimizer/pages/: 1_Returns.py
