[project]
name = "portfolio-analyzer"
version = "0.1.0"
description = "Interactive Streamlit app for portfolio risk and return analysis and Monte Carlo forecasting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "plotly>=6.5.2",
    "scipy>=1.17.1",
    "streamlit>=1.54.0",
    "yfinance>=1.1.0",
]
